<resources>

    <!-- Strings générales -->
    <string name="app_name">Orbox</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="ButtonCancel">Annuler</string>
    <string name="ButtonOK">OK</string>

    <!-- Strings relatives à l'activité Home -->
    <string name="ButtonAdministration">Administration</string>
    <string name="ButtonNewDescriptor">Nouveau Descripteur</string>
    <string name="ButtonSettings">Paramètres</string>

    <!-- Strings relatives à l'activité Administration -->
    <string name="NoText">Aucun texte saisi</string>
    <string name="Canceled">Annulé</string>
    <string name="ObjectExist">l\'objet éxiste déjà</string>
    <string name="CategoryExist">la catégorie éxiste déjà</string>
    <string name="ObjectAdded">l\'objet à été ajouté : </string>
    <string name="CategoryAdded">la catégorie à été ajouté : </string>
    <string name="ObjectRenamed">l\'objet à été renommé en : </string>
    <string name="CategoryRenamed">la catégorie à été renommé en : </string>
    <string name="CategoryDeleted">la catégorie à été supprimé</string>
    <string name="ObjectDeleted">l\'objet à été supprimé</string>
    <string name="ContextMenuDeleteCategory">Supprimer</string>
    <string name="ContextMenuRenameCategory">Renommer</string>
    <string name="ContextMenuAddObject">Nouvel objet</string>
    <string name="ContextMenuRenameObject">Renommer</string>
    <string name="ContextMenuDeleteObject">Supprimer</string>
    <string name="ContextMenuOpenObject">Ouvrir</string>
    <string name="QuestionRenameCategory">Entrez un nom de categorie</string>
    <string name="QuestionRenameObject">Entrez un nom d\'objet</string>
    <string name="QuestionAddCategory">Entrez un nom de categorie</string>
    <string name="QuestionAddObject">Entrez un nom d\'objet</string>
    <string name="QuestionDeleteObject">Êtes vous sûr de vouloir supprimer cet objet ?</string>
    <string name="QuestionDeleteCategory">Êtes vous sûr de vouloir supprimer cette catégorie ?</string>

    <!-- Strings relatives à la boite de dialogue edittext  -->
    <string name="DialogEditText_TextView">Question</string>
    <string name="DialogEditText_ButtonCancel">Annuler</string>
    <string name="DialogEditText_ButtonOk">Ok</string>

    <!-- Strings relatives à la boite de dialogue YesNo  -->
    <string name="DialogYesNo_TextView">Question</string>
    <string name="DialogYesNo_ButtonNo">Non</string>
    <string name="DialogYesNo_ButtonYes">Oui</string>

    <!-- Strings relatives à l'activité NewDescriptor -->
    <string name="TextViewSelectObject">Objet sélectionné: </string>
    <string name="TextViewSelectCategory">Categorie sélectionnée: </string>
    <string name="TextViewSelectObjectGuidelines">Sélectionner la catégorie et l\'objet auquel vous voulez ajouter un nouveau descripteur</string>
    <string name="TextViewTakePicture">Appuyer sur l\'icône suivante pour prendre une photo:</string>

    <!-- Strings relatives à l'activité objectproperties -->
    <string name="ObjectProperties_oralDescription">Description orale : </string>

    <!-- Strings relatives à l'activité Settings -->
    <string name="TextViewVolume">Volume</string>
    <string name="TextViewLighting">Eclairage</string>
    <string name="TextViewLanguage">Langue</string>
    <string-array name="LanguageArrays">
        <item>Français</item>
        <item>Anglais</item>
    </string-array>
    <string name="title_activity_administration">Administration</string>
    <string name="title_activity_new_descriptor">NewDescriptor</string>
    <string name="title_activity_descriptor_view">DescriptorView</string>
    <string name="title_activity_object_properties">ObjectProperties</string>
    <string name="error_frame">Erreur lors de la lecture des paramètres</string>
</resources>
