<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dii.polytech.orbox.Settings"
    tools:showIn="@layout/activity_settings">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Settings_TextViewVolume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TextViewVolume"/>

        <SeekBar
            android:id="@+id/Settings_SeekBarVolume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Settings_TextViewVolume" />

        <TextView
            android:id="@+id/Settings_TextViewLighting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Settings_SeekBarVolume"
            android:text="@string/TextViewLighting" />

        <SeekBar
            android:id="@+id/Settings_SeekBarLighting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Settings_TextViewLighting" />

        <TextView
            android:id="@+id/Settings_TextViewLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Settings_SeekBarLighting"
            android:text="@string/TextViewLanguage" />

        <Spinner
            android:id="@+id/Settings_SpinnerLanguages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Settings_TextViewLanguage"
            android:entries="@array/LanguageArrays" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Settings_ButtonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ButtonCancel" />

            <Button
                android:id="@+id/Settings_ButtonOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ButtonOK" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
