<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/DialogYesNo_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/DialogYesNo_TextView"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/DialogYesNo_TextView"
            android:orientation="horizontal"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:layout_alignParentStart="true">

            <Button
                android:id="@+id/DialogYesNo_ButtonNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DialogYesNo_ButtonNo" />

            <Button
                android:id="@+id/DialogYesNo_ButtonYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DialogYesNo_ButtonYes" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>