<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/DialogEditText_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/DialogEditText_TextView"/>

        <EditText
            android:id="@+id/DialogEditText_Text"
            android:layout_marginTop="15dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/DialogEditText_Text"
            android:orientation="horizontal"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:layout_alignParentStart="true">

            <Button
                android:id="@+id/DialogEditText_ButtonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DialogEditText_ButtonCancel" />

            <Button
                android:id="@+id/DialogEditText_ButtonOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DialogEditText_ButtonOk" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>