<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dii.polytech.orbox.Home"
    tools:showIn="@layout/activity_home">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="75dp" >

        <Button
            android:id="@+id/Home_ButtonAdministration"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_marginBottom="25dp"
            android:text="@string/ButtonAdministration"
            android:textSize="18sp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:minWidth="300dp"/>

        <Button
            android:id="@+id/Home_ButtonNewDescriptor"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_marginBottom="25dp"
            android:text="@string/ButtonNewDescriptor"
            android:textSize="18sp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:minWidth="300dp"/>

        <Button
            android:id="@+id/Home_ButtonSettings"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_marginBottom="25dp"
            android:text="@string/ButtonSettings"
            android:textSize="18sp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:minWidth="300dp"/>

    </LinearLayout>
</RelativeLayout>
